fix splash section alignment

--- a/less/main.less
+++ b/less/main.less
@@ -68,6 +68,13 @@ body {
       height: 100%;
       width: auto;
     }
+    .splash-with-player {
+      height: 100%;
+      img {
+        height: 100%;
+        width: auto;
+      }
+    }
   }
   #splash-car {
     position: absolute;
@@ -101,6 +108,7 @@ body {
   .social-share-container {
     margin: 0.5em;
   }
+  z-index: 10;
 }
 
 .Player {
